Fix game panel jumpiness

--- a/client/app/less/game-panel.less
+++ b/client/app/less/game-panel.less
@@ -21,20 +21,17 @@
 	opacity: 0;
 	animation: slide-in @slide-in-time forwards;
 	.game-panel-header {
-		display: flex;
 		padding: 0 10px;
 		margin: 15px 0;
 		width: 100%;
 		box-sizing: border-box;
 	}
 	.game-name {
-		flex-grow: 1;
 		font-size: 18px;
 		white-space: nowrap;
 		overflow: hidden;
 		text-overflow: ellipsis;
-		display: flex;
-		justify-content: center;
+		text-align: center;
 	}
 	.round-label {
 		font-size: 18px;
